test/resources/invalid/parse/InvalidActionType.flo
action GET_ALL_POSTS = something(url = '/posts', method = 'GET');

flow POSTS = {
    array posts = [];
    GET_ALL_POSTS >> posts;
}